fix landig
